Truncate text and image cropsets for Goomp page fix #52

--- a/app/assets/stylesheets/_app.sass
+++ b/app/assets/stylesheets/_app.sass
@@ -231,3 +231,10 @@
 
 .ui.fixed.menu, .ui[class*="top fixed"].menu
   height: 15%
+
+.ui.cards > .ui.card
+  .image
+    height: 130px
+
+.ui.cards > .card > .image > img, .ui.card > .image > img
+  height: 130px
